--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Comodo Application</title>
-  <base href="/"> <!-- <base href="/comodo-ui/"> [In Production Mode Only] -->
+  <base href="/"> <!-- <base href="/issue-tracker-system/"> [In Production Mode Only] -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
